# kgcli

./: Cargo.toml
.github/workflows/: release.yml
npm/: .gitignore  install.js  package.json
src/: db.rs  jsonld.rs  main.rs  model.rs
src/commands/: create.rs  delete.rs  get.rs  link.rs  merge.rs  mod.rs  neighbors.rs  path.rs  promote.rs  query.rs  schema.rs  search.rs  set.rs  types.rs  unlink.rs
