[package]
name = "ont-cli"
version = "0.1.0"
edition = "2024"
description = "Graph database CLI for OSINT investigations"
license = "MIT"
repository = "https://github.com/0xdecaf/ont-cli"
rust-version = "1.85"

[[bin]]
name = "ont"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
